--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Um site de Venda de tranças">
-    <title>Alice tranlas</title>
+    <title>Alice tranças</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="responsivo.css">
 </head>
