--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Um site de Venda de tranças">
     <title>Alice tranças</title>
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="responsivo.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
