--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#" class="contact-btn">Entre em contato</a>
         </div>
         <div class="img-headline">
-                <img style=" max-width: 80%;" src="img/logo.jpg" >
+                <img style=" max-width: 80%;" src="logo.jpg" >
         </div>
     </header>
 
