--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="card" id="card14">
 		      <img src="TRança no topo1.jpeg" alt="Imagem 7">
 		      <img src="TRança no topo2.jpeg" alt="Imagem 8">
-          <img src="img/TRança no topo3.jpeg" alt="Imagem 8">
+          <img src="TRança no topo3.jpeg" alt="Imagem 8">
 		    </div>
         <div class="texto14">
           <h3>Trança no topo - R$60,00 <br>
@@ -219,7 +219,7 @@
         <div class="card" id="card16">
 		      <img src="Trança tiara no topo1.jpeg" alt="Imagem 7">
 		      <img src="Trança tiara no topo2.jpeg" alt="Imagem 8">
-          <img src="img/TRança no topo3.jpeg" alt="Imagem 8">
+           		<img src="Trança tiara no topo3.jpeg" alt="Imagem 8">
 		    </div>
         
 		</div>     
