--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="card" id="card4">
 		      <img src="Penteados variados.jpeg" alt="Imagem 7">
 		      <img src="Penteados variados 2.jpeg" alt="Imagem 8">
-          <img src="img/Penteados variados 3.jpeg" alt="Imagem 8">
+          		<img src="Penteados variados 3.jpeg" alt="Imagem 8">
 		    </div>
         <div class="texto4">
           <h3>Penteados variados - R$140,00 <br>
@@ -219,7 +219,7 @@
         <div class="card" id="card16">
 		      <img src="Trança tiara no topo1.jpeg" alt="Imagem 7">
 		      <img src="Trança tiara no topo2.jpeg" alt="Imagem 8">
-           		<img src="Trança tiara no topo3.jpeg" alt="Imagem 8">
+           		
 		    </div>
         
 		</div>     
